Backoffice: Deactivate / Activate a Rule